--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Widget Demo</title>
+    <title>Search Widget Demo Title</title>
 </head>
 <body>
     <h1>Search Widget Demo</h1>
