--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
     </style>
 </head>
 <body>
-    <h1>AI-Powered Search Demo</h1>
+    <h1>CatGPT</h1>
     <p>
-        Experience the power of AI-driven search. This demo uses Google Cloud AI 
-        to provide intelligent and context-aware search results. Click the button 
-        below to start exploring!
+        Hello, I'm CatGPT, a helpful service agent. I'm an expert on 2011 D6K Operator Manuals. You can ask me anything!
     </p>
     
     <!-- Button that opens the widget on click -->
