--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <h1>CatGPT</h1>
     <p>
-        Hello, I'm CatGPT, a helpful service agent. I'm an expert on 2011 D6K Operator Manuals. You can ask me anything! <br> Example: Can I stop the engine right after running it hard? Or, why does this button make my blade gyrate?
+        Hello, I'm CatGPT, a helpful service agent. I'm an expert on 2011 D6K Operator Manuals. You can ask me anything! <br> Example: Can I stop the engine right after running it hard? Or, why does this button make my blade move around?
     </p>
     
     <!-- Button that opens the widget on click -->
