--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             margin-bottom: 30px;
         }
         .search-button {
-            background-color: #3498db;
-            color: white;
+            background-color: #FFD700; /* Yellow color */
+            color: #000000; /* Black text for better contrast on yellow */
             border: none;
             padding: 10px 20px;
             font-size: 16px;
@@ -32,7 +32,7 @@
             transition: background-color 0.3s;
         }
         .search-button:hover {
-            background-color: #2980b9;
+            background-color: #FFC700; /* Slightly darker yellow on hover */
         }
         ul {
             text-align: left;
@@ -58,7 +58,7 @@
     <br>
     <br>
     <!-- Button that opens the widget on click -->
-    <button id="searchWidgetTrigger" class="search-button">Ask Away!</button>
+    <button id="searchWidgetTrigger" class="search-button">Ask</button>
 
     <!-- Widget JavaScript bundle -->
     <script src="https://cloud.google.com/ai/gen-app-builder/client?hl=en_US"></script>
