--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
     <!-- Button that opens the widget on click -->
     <button id="searchWidgetTrigger" class="search-button">Ask</button>
 
+      <!-- QR Code -->
+      <br><br><br>
+      <div class="qr-code">
+        <img src="qr_code.png" alt="QR Code for dmyklejord.github.io" width="200">
+        <br><br>
+       (The QR code takes you to this same page).
+      </div>
+
     <!-- Widget JavaScript bundle -->
     <script src="https://cloud.google.com/ai/gen-app-builder/client?hl=en_US"></script>
 
