--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h1>CatGPT</h1>
     <p>
         Hello, I'm CatGPT, a helpful service agent. I'm an expert on 2011 D6K Operator Manuals. You can ask me anything! 
-    <br> <b> This is a very early internal beta using public information. </b>
+    <br> <b> This is a very early  beta using public information. </b>
     </p>
 
     Here are a couple examples:
