--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         <br><br>
        (The QR code takes you to this same page).
       </div>
+      <div>
+      <br><br>
+      Contact: Duane Myklejord
+      </div>
 
     <!-- Widget JavaScript bundle -->
     <script src="https://cloud.google.com/ai/gen-app-builder/client?hl=en_US"></script>
