--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
     <h1>CatGPT</h1>
     <p>
-        Hello, I'm CatGPT, a helpful service agent. I'm an expert on 2011 D6K Operator Manuals. You can ask me anything! 
+        Hello, I'm CatGPT, a helpful service agent. I'm an expert on 2011 D6K Operator Manuals. You can ask me anything about the manual! 
     <br> <b> This is a very early  beta using public information. </b>
     </p>
 
