--- a/index.html
+++ b/index.html
@@ -3,18 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to CatGPT</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>CatGPT: AI-Powered Search Demo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 20px;
+            cursor: pointer;
+            transition: color 0.3s;
+        }
+        h1:hover {
+            color: #3498db;
+        }
+        p {
+            margin-bottom: 30px;
+        }
+        .search-button {
+            background-color: #FFD700;
+            color: #000000;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .search-button:hover {
+            background-color: #FFC700;
+        }
+        ul {
+            text-align: left;
+            display: inline-block;
+            margin: 0 auto;
+            padding-left: 20px;
+        }
+        .machine-image {
+            width: 125px;
+            height: 100px;
+            object-fit: cover;
+            margin: 10px;
+        }
+        .qr-code {
+            width: 200px;
+            height: 200px;
+            margin-top: 20px;
+        }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #FFD700;
+            color: #000000;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #FFC700;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to CatGPT</h1>
+    <h1 id="homeLink">Welcome to CatGPT</h1>
+    <p>
+        Hello, I'm CatGPT, a helpful service agent. I'm an expert on 2011 D6K and 2019 349DL Operator Manuals. You can ask me anything about the manuals!
+        <br> <b>This is a very early beta using public information.</b>
+    </p>
     <div class="button-container">
-        <a href="d6k.html" class="button">D6K Manual</a>
-        <a href="349dl.html" class="button">349DL Manual</a>
+        <a href="https://catgpt.fyi/d6k" class="button">D6K Manual</a>
+        <a href="https://catgpt.fyi/349dl" class="button">349DL Manual</a>
     </div>
-    <div class="content-container">
+
+    <div>
         <img src="d6k_art.png" alt="D6K Machine" class="machine-image">
         <img src="349dl_art.png" alt="349DL Machine" class="machine-image">
     </div>
+
+    <button id="searchWidgetTrigger" class="search-button">Ask the manual</button>
+    
+    <br><br><br>
+    <div class="qr-code">
+        <img src="d6k_qr_code.png" alt="QR Code for d6k.CatGPT.fyi">
+        <br>
+        (The QR code takes you to this same page).
+    </div>
+    <div>
+        <br><br>
+        Contact: Duane Myklejord
+    </div>
+    
+    <script src="https://cloud.google.com/ai/gen-app-builder/client?hl=en_US"></script>
+    <gen-search-widget
+        configId="e50eba44-f5fc-4ba5-8f22-47eb63076493"
+        location="us"
+        triggerId="searchWidgetTrigger">
+    </gen-search-widget>
+
+    <script>
+        document.getElementById('homeLink').addEventListener('click', function() {
+            window.location.href = 'https://catgpt.fyi';
+        });
+    </script>
 </body>
 </html>
